# shell-logger

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  logger.py  pyproject.toml  requirements.txt  setup.py  snapshot.py
.github/ISSUE_TEMPLATE/: bug.md  post-mortem.md  question.md
.github/workflows/: codeql.yml  continuous-integration.yml  dependency-review.yml  scorecard.yml  semantic-release.yml
.gitlab/issue_templates/: Bug.md  Discussion.md  Documentation.md  Feature.md  Onboarding.md  Post-Mortem.md  Question.md  Refactor.md  Security.md  Task.md
doc/: make-html.bash  make_html_docs.sh  requirements.txt
doc/source/: AbstractMethod.rst  HTMLUtilities.rst  Shell.rst  ShellLogger.rst  StatsCollector.rst  Trace.rst  abstract_method.rst  classes.rst  conf.py  html_utilities.rst  index.rst  shell.rst  shell_logger.rst  spelling_wordlist.txt  stats_collector.rst  todo.rst  trace.rst  trace_collector.rst  util.rst
example/: .gitignore  build_flex.py  build_flex.sh  hello_world_html.py  hello_world_html_and_console.py  hello_world_html_with_stats.py  requirements.txt  run-all.bash
examples/: build_flex.py  hello_world.sh  hello_world_html.py  hello_world_html_and_console.py  hello_world_html_with_stats.py
logger/: __init__.py  classes.py  logger.py  util.py
logger/resources/: child_logger_style.css  code_block_style.css  command_style.css  detail_list_style.css  diagnostics_style.css  message_style.css  output_style.css  search_controls.css  search_output.js  stat_chart_style.css  top_level_style_adjustments.css
logger/resources/templates/: child_logger.html  command.html  command_detail.html  command_detail_list.html  diagnostics.html  hidden_command_detail.html  html_message.html  message.html  output_block.html  output_card.html  output_card_collapsed.html  output_line.html  parent_logger.html  stat_chart.html
shell_logger/: __init__.py  abstract_method.py  html_utilities.py  shell.py  shell_logger.py  stats_collector.py  trace.py  trace_collector.py
shell_logger/resources/: child_logger_style.css  code_block_style.css  command_style.css  diagnostics_style.css  message_style.css  output_style.css  parent_logger_style.css  search_output.js
shell_logger/resources/templates/: command_detail_list.html
src/logger/resources/: top_level_style_adjustments.css
src/logger/resources/templates/: diagnostics.html  output_card_collapsed.html
src/shelllogger/: HTMLUtilities.py  Shell.py  ShellLogger.py  StatsCollector.py  Trace.py  __init__.py  abstract_method.py  classes.py  html_utilities.py  shell.py  shell_logger.py  stats_collector.py  trace.py  util.py
src/shelllogger/resources/templates/: child_logger.html  hidden_command_detail.html  html_message.html  output_block.html  output_line.html  stat_chart.html
test/: __init__.py  requirements.txt  test_shell_logger.py
tests/: requirements.txt  test_ShellLogger.py  test_logger.py  test_shell_logger.py
