[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "shell-logger-sandialabs"
version = "3.0.4"
license = "LICENSE.md"
readme = "README.md"
keywords = ["shell", "logging"]
repository = "https://github.com/sandialabs/shell-logger"
description = "A tool for keeping track of Python's interactions with the shell."
documentation = "https://shell-logger.readthedocs.io"
authors = [
    "Josh Braun <josbrau@sandia.gov>",
    "David Collins <dcollin@sandia.gov>",
    "Jason M. Gates <jmgate@sandia.gov>"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Logging",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Typing :: Typed"
]
packages = [
    { include = "shell_logger" },
]


[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.dev-dependencies]
# At some point, convert from the various requirements.txt files to this
# list of Poetry development dependencies.


[tool.poetry.urls]
CI = "https://github.com/sandialabs/shell-logger/actions"
Issues = "https://github.com/sandialabs/shell-logger/issues"


[tool.ruff]
line-length = 79


[tool.ruff.lint]
extend-select = [
    "A",
    "AIR",
    # "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "D",
    "DJ",
    # "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    # "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TCH",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D212",
]


[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = [
    "os.set_inheritable",
]


[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",
    "SLF001",
    "T201",
]
"doc/source/conf.py" = ["INP001"]
"example/*.py" = ["T201"]
"html_utilities.py" = ["PLR2004"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true



[tool.semantic_release]
build_command = "python3 -m pip install poetry && poetry build"
commit_message = """
chore: Release v{version}

Automatically generated by python-semantic-release."""
version_variables = [
    "doc/source/conf.py:version",
    "shell_logger/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]


[tool.semantic_release.branches.master]
match = "master"


[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore.*deps.*Bump",
    "Merge pull request",
    "ci.*pre-commit.*auto-update",
]


[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "minor",
    "patch",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat", "minor"]
patch_tags = ["fix", "patch", "perf"]
